// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`printing ballots, print report, and test decks 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="sc-fzoyTs fPHmjU"
  >
    <main
      class="sc-fzoNJl hoFDXt"
    >
      <div
        class="sc-fzoXWK kDQAEJ"
      >
        <div
          class="sc-AxgMl hyySgy"
        >
          <h1>
            Test Deck
          </h1>
          <p>
            <strong>
              Election:
            </strong>
             
            Mock General Election Choctaw 2020
            <br />
            <strong>
              Precinct:
            </strong>
             
            District 5
          </p>
          <p>
            <button
              class="sc-fzoxKX hjBPTL"
              type="button"
            >
              Print Test Deck
            </button>
          </p>
          <p>
            <button
              class="sc-fzoxKX cXfUdj"
              role="option"
              type="button"
            >
              back to Test Deck list
            </button>
          </p>
        </div>
      </div>
    </main>
    <div
      class="sc-fzpmMD fxKXxU"
    >
      <div
        class="sc-fznxKY ktoPeT"
      >
        <div
          class="sc-fznMAR eXpoQj"
        >
          Voting
          <span>
            Works
          </span>
        </div>
        <div
          class="sc-fznWOq iMvrRh"
        >
          Election Manager
        </div>
      </div>
      <div
        class="sc-fzolEj jOooId"
      >
        <button
          class="sc-fzoxKX jNBvmB"
          role="option"
          type="button"
        >
          Definition
        </button>
        <button
          class="sc-fzoxKX jNBvmB active-section"
          role="option"
          type="button"
        >
          Ballots
        </button>
        <button
          class="sc-fzoxKX cXfUdj"
          role="option"
          type="button"
        >
          Tally
        </button>
      </div>
      <div
        class="sc-fzqBkg bjEoKA"
      >
        <p
          class="sc-AxheI egGPrJ"
        >
          No USB
        </p>
      </div>
    </div>
  </div>
  <div
    class="print-only"
  >
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
  </div>
  <div />
</div>
`;

exports[`printing ballots, print report, and test decks 2`] = `
<div>
  <div
    class="sc-fzoyTs fPHmjU"
  >
    <main
      class="sc-fzoNJl hoFDXt"
    >
      <div
        class="sc-fzoXWK kDQAEJ"
      >
        <div
          class="sc-AxgMl hyySgy"
        >
          <h1>
            Test Ballot Deck Tally
          </h1>
          <p>
            <strong>
              Election:
            </strong>
             
            Mock General Election Choctaw 2020
            <br />
            <strong>
              Precinct:
            </strong>
             
            All Precincts
          </p>
          <p>
            <button
              class="sc-fzoxKX hjBPTL"
              type="button"
            >
              Print Results Report
            </button>
          </p>
          <p>
            <button
              class="sc-fzoxKX cXfUdj"
              role="option"
              type="button"
            >
              back to Test Deck list
            </button>
          </p>
        </div>
      </div>
    </main>
    <div
      class="sc-fzpmMD fxKXxU"
    >
      <div
        class="sc-fznxKY ktoPeT"
      >
        <div
          class="sc-fznMAR eXpoQj"
        >
          Voting
          <span>
            Works
          </span>
        </div>
        <div
          class="sc-fznWOq iMvrRh"
        >
          Election Manager
        </div>
      </div>
      <div
        class="sc-fzolEj jOooId"
      >
        <button
          class="sc-fzoxKX jNBvmB"
          role="option"
          type="button"
        >
          Definition
        </button>
        <button
          class="sc-fzoxKX jNBvmB"
          role="option"
          type="button"
        >
          Ballots
        </button>
        <button
          class="sc-fzoxKX cXfUdj active-section"
          role="option"
          type="button"
        >
          Tally
        </button>
      </div>
      <div
        class="sc-fzqBkg bjEoKA"
      >
        <p
          class="sc-AxheI egGPrJ"
        >
          No USB
        </p>
      </div>
    </div>
  </div>
  <div
    class="print-only"
  >
    <div
      class="sc-fzqMdD gxsDPP"
    >
      <h1>
        Test Ballot Deck Tally
      </h1>
      <p>
        <strong>
          Election:
        </strong>
         
         Mock General Election Choctaw 2020
        <br />
        <strong>
          Precinct:
        </strong>
         
        All Precincts
      </p>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            United States
            , 
            President
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Presidential Electors for Phil Collins for President and Bill Parker for Vice President
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            United States
            , 
            Senate 
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Mike Espy
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Cindy Hyde-Smith
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Jimmy Edwards
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            US House Of Representatives
            , 
            1st Congressional District
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Antonia Eliason
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  Trent Kelly
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Northern District
            , 
            Supreme Court District 3(Northern) Position 3
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Josiah Dennis Coleman
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  Percy L. Lynchard
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              9 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 01
            , 
            Election Commissioner  01
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Glynda Chaney Fulce
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  9
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              9 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 02
            , 
            Election Commissioner 02
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Charles Beck
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  6
                </td>
              </tr>
              <tr>
                <td>
                  Sharon Brooks
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  3
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              9 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 03
            , 
            Election Commissioner 03
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Dorothy Anderson
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  9
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              9 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 04
            , 
            Election Commissioner 04
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Willie Mae Guillory
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  6
                </td>
              </tr>
              <tr>
                <td>
                  Lewis Wright
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  3
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              3 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            Election Commissioner 05
            , 
            Election Commissioner 05
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Ouida A Loper
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  2
                </td>
              </tr>
              <tr>
                <td>
                  Wayne McLeod
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  1
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              3 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            School Board District 5
            , 
            School Board 05
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  Michael D Thomas
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  3
                </td>
              </tr>
              <tr>
                <td>
                  Write-In
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              0 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            State Of Mississippi
            , 
            Ballot Measure 1 – Either/Neither
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  yes
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  no
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              0 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            State Of Mississippi
            , 
            Ballot Measure 1 – Pick One
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  yes
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  no
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            State Of Mississippi
            , 
            Ballot Measure 2: House Concurrent Resolution No. 47
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  yes
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  no
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="sc-fzqAui kBDcnz"
      >
        <div
          class="sc-AxgMl bNrfDN"
        >
          <div
            class="sc-fzomuh kopxcs ignore-prose"
          >
            <span
              class="sc-AxheI qGAAH"
            >
              39 ballots
               cast /
               
              0 overvotes
               /
               
              0 undervotes
            </span>
          </div>
          <h3>
            State Of Mississippi
            , 
            Ballot Measure 3: House Bill 1796 - Flag Referendum
          </h3>
          <table
            class="sc-fznzOf dOJgtS"
          >
            <tbody>
              <tr>
                <td>
                  yes
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  26
                </td>
              </tr>
              <tr>
                <td>
                  no
                </td>
                <td
                  class="sc-fznMnq iflOZZ"
                >
                  13
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`tabulating CVRs 1`] = `
<div
  data-testid="tally-report-contents"
>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          100 ballots
           cast /
           
          1 overvote
           /
           
          7 undervotes
        </span>
      </div>
      <h3>
        United States
        , 
        President
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              27
            </td>
          </tr>
          <tr>
            <td>
              Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              36
            </td>
          </tr>
          <tr>
            <td>
              Presidential Electors for Phil Collins for President and Bill Parker for Vice President
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              29
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          100 ballots
           cast /
           
          4 overvotes
           /
           
          4 undervotes
        </span>
      </div>
      <h3>
        United States
        , 
        Senate 
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Mike Espy
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              29
            </td>
          </tr>
          <tr>
            <td>
              Cindy Hyde-Smith
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              35
            </td>
          </tr>
          <tr>
            <td>
              Jimmy Edwards
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              28
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          100 ballots
           cast /
           
          3 overvotes
           /
           
          5 undervotes
        </span>
      </div>
      <h3>
        US House Of Representatives
        , 
        1st Congressional District
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Antonia Eliason
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              46
            </td>
          </tr>
          <tr>
            <td>
              Trent Kelly
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              46
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          100 ballots
           cast /
           
          0 overvotes
           /
           
          5 undervotes
        </span>
      </div>
      <h3>
        Northern District
        , 
        Supreme Court District 3(Northern) Position 3
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Josiah Dennis Coleman
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              37
            </td>
          </tr>
          <tr>
            <td>
              Percy L. Lynchard
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              58
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          18 ballots
           cast /
           
          0 overvotes
           /
           
          1 undervote
        </span>
      </div>
      <h3>
        Election Commissioner 01
        , 
        Election Commissioner  01
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Glynda Chaney Fulce
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              17
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          15 ballots
           cast /
           
          0 overvotes
           /
           
          1 undervote
        </span>
      </div>
      <h3>
        Election Commissioner 02
        , 
        Election Commissioner 02
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Charles Beck
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              5
            </td>
          </tr>
          <tr>
            <td>
              Sharon Brooks
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              9
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          23 ballots
           cast /
           
          0 overvotes
           /
           
          1 undervote
        </span>
      </div>
      <h3>
        Election Commissioner 03
        , 
        Election Commissioner 03
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Dorothy Anderson
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              22
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          25 ballots
           cast /
           
          1 overvote
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 04
        , 
        Election Commissioner 04
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Willie Mae Guillory
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              10
            </td>
          </tr>
          <tr>
            <td>
              Lewis Wright
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              14
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          19 ballots
           cast /
           
          2 overvotes
           /
           
          2 undervotes
        </span>
      </div>
      <h3>
        Election Commissioner 05
        , 
        Election Commissioner 05
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Ouida A Loper
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              9
            </td>
          </tr>
          <tr>
            <td>
              Wayne McLeod
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              6
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          19 ballots
           cast /
           
          0 overvotes
           /
           
          0 undervotes
        </span>
      </div>
      <h3>
        School Board District 5
        , 
        School Board 05
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              Michael D Thomas
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              19
            </td>
          </tr>
          <tr>
            <td>
              Write-In
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          98 ballots
           cast /
           
          3 overvotes
           /
           
          3 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 1 – Either/Neither
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              yes
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              39
            </td>
          </tr>
          <tr>
            <td>
              no
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              54
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          98 ballots
           cast /
           
          3 overvotes
           /
           
          4 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 1 – Pick One
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              yes
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              41
            </td>
          </tr>
          <tr>
            <td>
              no
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              51
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          100 ballots
           cast /
           
          2 overvotes
           /
           
          5 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 2: House Concurrent Resolution No. 47
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              yes
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              40
            </td>
          </tr>
          <tr>
            <td>
              no
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              53
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="sc-fzqAui kBDcnz"
  >
    <div
      class="sc-AxgMl bNrfDN"
    >
      <div
        class="sc-fzomuh kopxcs ignore-prose"
      >
        <span
          class="sc-AxheI qGAAH"
        >
          100 ballots
           cast /
           
          3 overvotes
           /
           
          2 undervotes
        </span>
      </div>
      <h3>
        State Of Mississippi
        , 
        Ballot Measure 3: House Bill 1796 - Flag Referendum
      </h3>
      <table
        class="sc-fznzOf dOJgtS"
      >
        <tbody>
          <tr>
            <td>
              yes
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              43
            </td>
          </tr>
          <tr>
            <td>
              no
            </td>
            <td
              class="sc-fznMnq iflOZZ"
            >
              52
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
